--- a/client/src/component/Elevator.css
+++ b/client/src/component/Elevator.css
@@ -5,4 +5,8 @@
     border: black solid 2px;
     background-color: rgba(70, 130, 180, 0.3);
     border-radius: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
 }
