--- a/client/src/component/RequestControls.css
+++ b/client/src/component/RequestControls.css
@@ -6,29 +6,26 @@
     align-content: center;
     height: 100%;
     width: max-content;
+    margin: 10px;
 }
 
 .request-button {
-    width: 0;
-    height: 0;
-    border-left: 30px solid transparent;
-    border-right: 30px solid transparent;
-    border-top: 0;
-    border-bottom: 0;
-    background-color: transparent;
-    transform: scaleY(1.2);
-
-    padding: 0;
     margin: 10px;
-
+    width: 50px;
+    height: 50px;
+    font-size: 1.5rem;
+    border-radius: 30px;
+    font-weight: bolder;
+    cursor: pointer;
 }
 
-.up-button {
-    border-bottom: 30px solid green;
+.request-button:disabled {
+    color: rgba(139, 0, 0, 0.15);
+    cursor: auto;
 }
 
-.down-button {
-    border-top: 30px solid green;
-
+.active{
+    color: green !important;
+    text-shadow:  1px 1px 3px rgba(173, 255, 47, 1);
 }
 
