--- a/client/src/component/Grid.css
+++ b/client/src/component/Grid.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: max-content;
     align-items: stretch;
     box-sizing:border-box;
     padding: 10px;
