elevators are colored green when open

--- a/client/src/component/Elevator.css
+++ b/client/src/component/Elevator.css
@@ -8,6 +8,14 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
+}
+
+.reserved{
+    background-color: rgba(255, 99, 71, 0.3);
+}
+
+.open{
+    background-color: rgb(193,227,193);
 
 }
 
