--- a/client/src/component/Elevator.css
+++ b/client/src/component/Elevator.css
@@ -2,8 +2,8 @@
     width: 100%;
     height: 100%;
     box-sizing:border-box;
-    border: black solid 2px;
-    background-color: rgba(70, 130, 180, 0.3);
+    border: rgb(0,33,71) solid 1px;
+    background-color: rgb(204, 216, 231);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -11,11 +11,11 @@
 }
 
 .reserved{
-    background-color: rgba(255, 99, 71, 0.3);
+    background-color: rgb(255,221,216);
 }
 
 .open{
-    background-color: rgb(193,227,193);
+    background-color: rgb(235,250,218);
 
 }
 
