--- a/client/src/component/ElevatorButton.css
+++ b/client/src/component/ElevatorButton.css
@@ -4,15 +4,20 @@
     margin: 3px;
     border-radius: 15px;
     cursor: pointer;
+    font-weight: normal;
 }
 
 .set{
-    background-color: rgba(173, 255, 47, 0.60);
-    color: black;
+    /*color: #21b683;*/
+    font-weight: bolder;
+    background-color: rgb(179,236,114);
+    /*text-shadow: 0 0 10px darkgreen;*/
     cursor: auto;
+    pointer-events: none;
 }
 
 .inactive{
-    background-color: rgba(255, 99, 71, 0.40);
+    /*background-color: rgba(255, 99, 71, 0.40);*/
+    color: rgb(208,208,225);;
     cursor: auto;
 }
