--- a/client/src/component/RequestControls.css
+++ b/client/src/component/RequestControls.css
@@ -25,6 +25,6 @@
 
 .active{
     color: green !important;
-    text-shadow:  1px 1px 3px rgba(173, 255, 47, 1);
+    text-shadow:  1px 1px 3px rgb(179,236,114);
 }
 
