--- a/client/src/component/Grid.css
+++ b/client/src/component/Grid.css
@@ -5,7 +5,7 @@
     height: max-content;
     flex: 1 100%;
     align-items: stretch;
-    box-sizing:border-box;
+    box-sizing: border-box;
     padding: 2px;
 }
 
@@ -17,18 +17,18 @@
     align-items: stretch;
 }
 
-.grid-row:nth-child(odd){
-    background-color: rgb(240,240,252);
+.grid-row:nth-child(odd) {
+    background-color: rgb(240, 240, 252);
 
 }
 
-.grid-row:nth-child(even){
-    background-color: rgb(245,245,247);
+.grid-row:nth-child(even) {
+    background-color: rgb(245, 245, 247);
 
 }
 
 .grid-cell {
-    box-sizing:border-box;
+    box-sizing: border-box;
     padding: 7px;
     flex: 1 100%;
 }
