show current floors on buttons

--- a/client/src/component/ElevatorButton.css
+++ b/client/src/component/ElevatorButton.css
@@ -21,3 +21,10 @@
     color: rgb(208, 208, 225);;
     cursor: auto;
 }
+
+.current-floor{
+    background-color: rgb(180,218,236);
+    font-weight: bolder;
+
+    color: rgb(0, 0, 41);
+}
